--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=FastBot
-version=1.7
+version=2.0
 author=AlexGyver <alex@alexgyver.ru>
 maintainer=AlexGyver <alex@alexgyver.ru>
 sentence=Simple library for Telegram bot (messages and menus)
 paragraph=Simple library for Telegram bot (messages and menus)
 category=Communication
 url=https://github.com/GyverLibs/FastBot
-architectures=esp8266
+architectures=esp8266, esp32
