--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=FastBot
-version=2.19
+version=2.20
 author=AlexGyver <alex@alexgyver.ru>
 maintainer=AlexGyver <alex@alexgyver.ru>
-sentence=Simple library for Telegram bot (messages and menus)
-paragraph=Simple library for Telegram bot (messages and menus)
+sentence=ESP8266/ESP32 library for Telegram bot (messages, menus, RTC time sync, OTA update)
+paragraph=ESP8266/ESP32 library for Telegram bot (messages, menus, RTC time sync, OTA update)
 category=Communication
 url=https://github.com/GyverLibs/FastBot
 architectures=esp8266, esp32
