--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=FastBot
-version=2.21
+version=2.22
 author=AlexGyver <alex@alexgyver.ru>
 maintainer=AlexGyver <alex@alexgyver.ru>
-sentence=ESP8266/ESP32 library for Telegram bot (messages, menus, RTC time sync, OTA update)
-paragraph=ESP8266/ESP32 library for Telegram bot (messages, menus, RTC time sync, OTA update)
+sentence=Fast ESP8266/ESP32 library for Telegram bot (messages, menus, time sync, OTA update + SPIFFS, files upload and download)
+paragraph=Fast ESP8266/ESP32 library for Telegram bot (messages, menus, time sync, OTA update + SPIFFS, files upload and download)
 category=Communication
 url=https://github.com/GyverLibs/FastBot
 architectures=esp8266, esp32
